--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,37 @@ body{
 #navbar li{
     list-style: none;
     padding: 0 20px;
+    position: relative;
 }
+
+#navbar li a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active {
+    color: #800080;
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after {
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #800080;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
+
+
+
+
 
 /* Home Page */
 
