--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,19 @@ p{
     margin: 40px 0;
 }
 
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
 body{
     width: 100%;
 }
@@ -186,6 +199,7 @@ body{
     background-color: #fff2e5;
 }
 
+/* product */
 #product1{
     text-align: center;
 }
@@ -263,6 +277,40 @@ body{
     text-align: center;
 }
 
+/* footer */
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url(../img/banner/b2.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
 
+#banner h4{
+    color: #fff;
+    font-size: 16px;
+}
+
+#banner h2{
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: #ef3636;    
+}
+
+#banner button:hover{
+    background: #800080;
+    color: #fff;
+}
+
+ 
 
 /* Shop Page */
