--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ footer .copyright{
 /* Shop Page */
 
 
-/* SIngle Product */
+/* Single Product */
 
 
 
@@ -543,3 +543,32 @@ footer .copyright{
 
 
 /* About Page */
+
+
+/* Cart Page */
+
+
+
+/* Start Media Query */
+
+@media (max-width:799px) {
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0px 40px 60px rgba(0, 0, 0, 0.1);
+    } 
+}
+
+
+
+
+
+
