--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ footer .copyright{
         padding: 40px 40px;
     }
 
-    #navbar {
+    #navbar{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -584,11 +584,11 @@ footer .copyright{
         right: 0px;
     }
     
-    #navbar li {
+    #navbar li{
         margin-bottom: 25px;
     }
     
-    #mobile {
+    #mobile{
         display: flex;
         align-items: center;
     }
@@ -653,5 +653,73 @@ footer .copyright{
 
     #newsletter .form{
         width: 70%;
+    }
+}
+
+@media (max-width: 477px) {
+    .section-p1{
+        padding: 20px;
+    }
+
+    #header{
+        padding: 10px 30px;
+    }
+
+    h1{
+        font-size: 38px;
+    }
+
+    h2{
+        font-size: 32px;
+    }
+ 
+    #hero{
+        padding: 0 20px;
+        background-position: 55%;
+    }
+
+    #feature{
+        justify-content: space-between;
+    }
+
+    #feature .fe-box{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+
+    #product1 .pro{
+        width: 100%;
+    }
+
+    #banner{
+        height: 40vh;
+    }
+
+    #sm-banner .banner-box{
+        height: 40vh;
+    }
+
+    #sm-banner .banner-box2{
+        margin-top: 20px;
+    }
+
+    #banner3{
+        padding: 0 20px;
+    }
+
+    #banner3 .banner-box{
+        width: 100%;
+    }
+
+    #newsletter{
+        padding: 40px 20px;
+    }
+
+    #newsleeter .form{
+        width: 100%;
+    }
+
+    footer .copyright{
+        text-align: start;
     }
 }
