--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,41 @@ footer .copyright{
 
 
 /* Shop Page */
+#page-header{
+    background-image: url(../img/banner/b1.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+}
+
+#page-header h2, 
+#page-header p{
+    color: #fff;
+}
+
+#pagination{
+   text-align: center;
+}
+
+#pagination a{
+    text-decoration: none;
+    background-color: #800080;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+
+#pagination a i{
+    font-size: 16px;
+    font-weight: 600;
+}
+      
 
 
 /* Single Product */
