--- a/css/style.css
+++ b/css/style.css
@@ -578,8 +578,19 @@ footer .copyright{
 
 
 /* Single Product */
-#prodetails{
-    
+#prodetails .single-pro-image{
+    width: 40%;
+    margin-right: 50px;
+}
+
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col{
+    flex-basis: 24%;
+    cursor: pointer;
 }
 
 
