--- a/css/style.css
+++ b/css/style.css
@@ -708,14 +708,25 @@ footer .copyright{
     z-index: -9;
 }
 
-
-
-
-
-
-
-
 /* About Page */
+#page-header.about-header{
+    background-image: url(../img/about/banner.png);
+}
+
+#about-head{
+    display: flex;
+    align-items: center;
+}
+
+#about-head img{
+    width: 50%;
+    height: auto;
+}
+
+#about-head div{
+    padding-left: 40px;
+}
+
 
 
 /* Cart Page */
