--- a/css/style.css
+++ b/css/style.css
@@ -727,6 +727,24 @@ footer .copyright{
     padding-left: 40px;
 }
 
+#about-app{
+    text-align: center;
+}
+
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
+
+
 
 
 /* Cart Page */
