update-about-page

--- a/css/style.css
+++ b/css/style.css
@@ -743,10 +743,6 @@ footer .copyright{
     border-radius: 20px;
 }
 
-
-
-
-
 /* Cart Page */
 
 
@@ -950,6 +946,24 @@ footer .copyright{
     }
 
     #blog .blog-details{
+        width: 100%;
+    }
+
+    /* About Page */
+    #about-head{
+        flex-direction: column;
+    }
+
+    #about-head img{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    #about-head div{
+        padding-left: 0px;
+    }
+
+    #about-app .video{
         width: 100%;
     }
 }
