--- a/css/style.css
+++ b/css/style.css
@@ -864,7 +864,6 @@ footer .copyright{
 
 
 /* Start Media Query */
-
 @media (max-width:799px) {
     .section-p1{
         padding: 40px 40px;
@@ -959,6 +958,15 @@ footer .copyright{
 
     #newsletter .form{
         width: 70%;
+    }
+
+    /* Contact Page */
+    #form-details{
+        padding: 40px;
+    }
+
+    #form-details form{
+        width: 50%;
     }
 }
 
@@ -1081,5 +1089,30 @@ footer .copyright{
 
     #about-app .video{
         width: 100%;
+    }
+
+    /* Contact Page */
+    #contact-details{
+        flex-direction: column;
+    }
+
+    #contact-details .details{
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    #contact-details .map{
+        width: 100%;
+    }
+
+    #form-details{
+        margin: 10px;
+        padding: 30px 10px;
+        flex-wrap: wrap;
+    }
+
+    #form-details form{
+        width: 100%;
+        margin-bottom: 30px;
     }
 }
