--- a/css/style.css
+++ b/css/style.css
@@ -855,6 +855,10 @@ footer .copyright{
 }
 
 /* Cart Page */
+#cart{
+    overflow-x: auto;
+}
+
 #cart table{
     width: 100%;
     border-collapse: collapse;
@@ -938,7 +942,8 @@ footer .copyright{
     border: 1px solod #e2e9e1;
 }
 
-#coupon button{
+#coupon button,
+#subtotal button{
     background-color: #800080;
     color: #fff;
     padding: 12px 20px;
@@ -1218,5 +1223,18 @@ footer .copyright{
     #form-details form{
         width: 100%;
         margin-bottom: 30px;
+    }
+    /* Cart Page */
+    #cart-add{
+        flex-direction: column;
+    }
+    
+    #coupon{
+        width: 100%;
+    }
+
+    #subtotal{
+        width: 100%;
+        padding: 20px;
     }
 }
